--- a/.github/workflows/workflow-a.yml
+++ b/.github/workflows/workflow-a.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+          pip install pyyaml
 
       - name: Modify Workflow B
         run: |
