--- a/.github/workflows/self-evo-123.yml
+++ b/.github/workflows/self-evo-123.yml
@@ -1,8 +1,8 @@
 name: Self-Evo-123
 
 on:
-  schedule:
-    - cron: '0 * * * *' # Runs every hour
+ # schedule:
+  #  - cron: '0 * * * *' # Runs every hour
   workflow_dispatch: # Allows manual trigger of the workflow
 
 jobs:
