--- a/.github/workflows/workflow-a.yml
+++ b/.github/workflows/workflow-a.yml
@@ -3,8 +3,8 @@
 name: Self-Improve Workflow B
 
 on:
-  schedule:
-    - cron: '0 * * * *' # Every hour
+ # schedule:
+  #  - cron: '0 * * * *' # Every hour
   workflow_dispatch: # Allows manual trigger
 
 jobs:
