--- a/.github/workflows/workflow-b.yml
+++ b/.github/workflows/workflow-b.yml
@@ -3,8 +3,8 @@
 name: Self-Improve Workflow A
 
 on:
-  schedule:
-    - cron: '30 * * * *' # Offset by 30 minutes
+ # schedule:
+  #  - cron: '30 * * * *' # Offset by 30 minutes
   workflow_dispatch: # Allows manual trigger
 
 jobs:
